# etternabot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config-default.json  config.json  terms-of-service.md
eo2/: Cargo.toml
eo2/src/: lib.rs  model.rs
pattern/: Cargo.toml
pattern/src/: lib.rs  noteskin.rs  parse.rs  render.rs  structures.rs
pattern_draw/: Cargo.toml
pattern_draw/src/: fractional_snap.rs  lib.rs  noteskin.rs  pattern.rs
score_ocr/: Cargo.toml
score_ocr/src/: lib.rs
src/: anti_deadlock_mutex.rs  auth.rs  cached.rs  config.rs  easter_egg.rs  framework.rs  initialization.rs  main.rs  mutex.rs  state.rs
src/api/: config.rs  mod.rs  structs.rs
src/commands/: compare.rs  help.rs  leaderboard.rs  misc.rs  mod.rs  pattern.rs  profile.rs  score_card.rs  scores_list.rs  utils.rs
src/commands/etterna/: mod.rs  pattern_visualize.rs
src/commands/skill_graph/: mod.rs  render.rs
src/discord_handler/: config.rs  draw_skill_graph.rs  mod.rs  pattern_visualize.rs  replay_graph.rs
src/discord_handler/commands/: help.rs  misc.rs  mod.rs  pattern.rs  profile.rs  profile_compare.rs  score_card.rs  scores_list.rs
src/discord_handler/commands/pattern/: mod.rs
src/discord_handler/commands/pattern/pattern_draw/: mod.rs  noteskin.rs  parse.rs  pattern.rs  render.rs
src/discord_handler/commands/skill_graph/: draw_skill_graph.rs  mod.rs  render.rs
src/discord_handler/listeners/: etternaonline_links.rs  mod.rs
src/discord_handler/listeners/score_ocr/: mod.rs  ocr.rs
src/discord_handler/pattern_visualize/: mod.rs  noteskin.rs  pattern.rs
src/discord_handler/score_card/: mod.rs  replay_graph.rs
src/discord_handler/score_ocr/: mod.rs
src/easter_egg/: casing.rs  chars.rs  mod.rs  order.rs  reverse.rs  unicode.rs
src/listeners/: mod.rs
src/score_card/: fun_facts.rs  mod.rs  replay_analysis.rs  replay_graph.rs
src/wife/: mod.rs  wife2.rs  wife3.rs
