[package]
name = "etternabot"
version = "0.1.0"
authors = ["James Guess <jamesguessis@gmail.com>", "kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"

[dependencies]
image = { version = "0.23", default-features = false }
serenity = { version = "0.8", default-features = false, features = ["cache", "http", "threadpool", "utils", "rustls_backend", "model", "client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { version = "1.3", default-features = false }
html2md = "0.2.9"
thiserror = "1.0.20"
rand = "0.7.3"
# etternaonline_api = { path = "../etternaonline-api" }
etternaonline_api = "0.2.0"
plotters = "0.3.0"
plotters-backend = "0.3.0"
plotters-bitmap = "0.3.0" # sjkhebrgkjhsdrfg why is plotters so segmentated
# etterna = { path = "../etterna-base", features = ["parallel", "serde"] }
etterna = { version = "0.1.0", features = ["parallel", "serde"] }
chrono = "0.4.13"
once_cell = "1.4.1"
thread-scoped = "1.0.2"
leptess = { git = "https://github.com/kangalioo/leptess" }
text_io = { git = "https://github.com/kangalioo/rust-si" }
imageproc = "0.21.0"

[profile.release]
debug = 2 # full debug info, to allow me to use gdb the next time the bot mysteriously fails out of the blue