[package]
name = "etternabot"
version = "0.1.0"
authors = ["James Guess <jamesguessis@gmail.com>", "kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"

[dependencies]
image = { version = "0.23", default-features = false }
# serenity = { version = "0.10.5", default-features = false, features = ["cache", "http", "utils", "rustls_backend", "model", "client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { version = "1.3", default-features = false } # extract EO links or judges from a message
html2md = "0.2.9" # for making profile descriptions (html) viewable
thiserror = "1.0.20" # pattern draw Error type
rand = "0.7.3" # for selecting random minanyms
# etternaonline_api = { path = "../etternaonline-api" }
etternaonline_api = { git = "https://github.com/kangalioo/etternaonline-api" }
# etternaonline_api = "0.2.0"
plotters = "0.3.0"
plotters-backend = "0.3.0"
plotters-bitmap = "0.3.0" # sjkhebrgkjhsdrfg why is plotters so segmentated
etterna = { version = "0.1.0", features = ["parallel", "serde"] }
chrono = "0.4.13" # to handle skillgraph x axis datetimes
once_cell = "1.4.1" # to store Regex's in static variables
thread-scoped = "1.0.2" # run skillgraph requests in parallel
# poise = { path = "../poise" }
poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }
futures = "0.3.13"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread"] }
base64 = "0.13"
itertools = "0.10"
log = "0.4.14"
env_logger = "0.9.0"
arrowvortex_clipboard = "0.2.0"

pattern = { path = "pattern" }

# To fix stupid cross compile errors
openssl-sys = { version = "0.9", features = ["vendored"] }

[patch.crates-io]
# etterna = { path = "../etterna-base" }
etterna = { git = "https://github.com/kangalioo/etterna-base" }
