[package]
name = "pattern"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"

[dependencies]
image = { version = "0.24", default-features = false }
thiserror = "1.0.20" # pattern draw Error type
etterna = { version = "0.1.0", features = ["parallel", "serde"] }
imageproc = "0.23.0"
log = "0.4.17"
