[package]
name = "pattern_draw"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# etterna = { package = "etterna_base", path = "../../etterna-base", features = ["parallel"] }
etterna = { package = "etterna_base", git = "https://github.com/kangalioo/etterna-base", features = ["parallel"] }
thiserror = "1.0.20"
image = "0.23"
imageproc = "0.21.0"